--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,25 +8,24 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="../../Godot Archive/softwares and games/Suicide Explorer/Linux-64 bit/Suicide Explorer.x86_64"
-patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
 [preset.0.options]
 
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=true
+binary_format/embed_pck=true
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
-binary_format/64_bits=true
-binary_format/embed_pck=true
-custom_template/release=""
-custom_template/debug=""
 
 [preset.1]
 
-name="Linux/X11 2"
+name="Linux/X11 32 bit"
 platform="Linux/X11"
 runnable=false
 custom_features=""
@@ -34,21 +33,20 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="../../Godot Archive/softwares and games/Suicide Explorer/Linux-32 bit/Suicide Explorer.x86"
-patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
 [preset.1.options]
 
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=false
+binary_format/embed_pck=true
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
-binary_format/64_bits=false
-binary_format/embed_pck=true
-custom_template/release=""
-custom_template/debug=""
 
 [preset.2]
 
@@ -60,21 +58,20 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="../../Godot Archive/softwares and games/Suicide Explorer/Windows-64 bit/Suicide Explorer.exe"
-patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
 [preset.2.options]
 
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=true
+binary_format/embed_pck=true
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
-binary_format/64_bits=true
-binary_format/embed_pck=true
-custom_template/release=""
-custom_template/debug=""
 codesign/enable=false
 codesign/identity=""
 codesign/password=""
@@ -94,7 +91,7 @@ application/trademarks=""
 
 [preset.3]
 
-name="Windows Desktop 2"
+name="Windows Desktop 32"
 platform="Windows Desktop"
 runnable=false
 custom_features=""
@@ -102,21 +99,20 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="../../Godot Archive/softwares and games/Suicide Explorer/Windows-32 bit/Suicide Explorer.exe"
-patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
 [preset.3.options]
 
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=false
+binary_format/embed_pck=true
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
-binary_format/64_bits=false
-binary_format/embed_pck=true
-custom_template/release=""
-custom_template/debug=""
 codesign/enable=false
 codesign/identity=""
 codesign/password=""
@@ -144,15 +140,27 @@ export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path="../../Godot Archive/softwares and games/Suicide Explorer/html/index.html"
-patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
 [preset.4.options]
 
+custom_template/debug=""
+custom_template/release=""
+variant/export_type=0
 vram_texture_compression/for_desktop=true
 vram_texture_compression/for_mobile=false
+html/export_icon=true
 html/custom_html_shell=""
 html/head_include=""
-custom_template/release=""
-custom_template/debug=""
+html/canvas_resize_policy=2
+html/focus_canvas_on_start=true
+html/experimental_virtual_keyboard=false
+progressive_web_app/enabled=false
+progressive_web_app/offline_page=""
+progressive_web_app/display=1
+progressive_web_app/orientation=0
+progressive_web_app/icon_144x144=""
+progressive_web_app/icon_180x180=""
+progressive_web_app/icon_512x512=""
+progressive_web_app/background_color=Color( 0, 0, 0, 1 )
